<resources>
    <string name="app_name">譜譜</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="map">Map</string>
    <string name="branch">Branch</string>
    <string name="family">Family</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_your_branch">Choose your branch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="you_know_nothing">You know nothing</string>

    <string name="addto_success">新增成功</string>


    <string name="spinArray">選擇活動種類</string>
    <string name="eventType">活動種類</string>
    <string name="attendEvent">參加的活動</string>
    <string name="notAttendEvent">這天沒有參加的活動唷</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="addPeople">新增</string>
    <string name="pleaseEditName">請輸入姓名</string>
    <string name="addByScanQRcode">掃描QR code 新增</string>
    <string name="addComplete">新增完成</string>
    <string name="choosePic">選擇頭貼</string>
    <string name="name">姓名</string>
    <string name="birth">Birth</string>
    <string name="birthDate">日期</string>
    <string name="chooseDate">選擇年月</string>
    <string name="wave">~</string>
    <string name="now">現在</string>
    <string name="birthLocation">地點</string>
    <string name="editBirthLocation">輸入出生地點</string>
    <string name="episode">生平事蹟</string>
    <string name="noEpisode">尚未新增事蹟</string>
    <string name="addEvent">創建活動</string>
    <string name="eventTitle">活動主題</string>
    <string name="editEventTitle">輸入活動主題</string>
    <string name="eventTime">時間</string>
    <string name="eventLocation">地點</string>
    <string name="editEventLocation">輸入地點</string>
    <string name="eventContent">活動內容</string>
    <string name="post">發佈</string>
    <string name="editEventContent">輸入活動內容</string>
    <string name="chooseEventType">活動類別</string>
    <string name="eventPoster">發起了活動</string>
    <string name="attendList">參加名單</string>
    <string name="messageWithEvent">與發起人聊天</string>
    <string name="attend">參加</string>
    <string name="iKnow">我知道了</string>
    <string name="fillOutFullInfo">請先填寫完整個人資訊唷</string>
    <string name="noEventComplete">尚未有活動結束</string>
    <string name="addAlbumAfterEvent">活動結束後新增相片吧</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="addFamilyName">請輸入家族名稱</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="addEpisode">創建事蹟</string>
    <string name="episodeTitle">事蹟主題</string>
    <string name="editEpisodeTitle">輸入主題</string>
    <string name="episodeTime">發生時間</string>
    <string name="episodeLocation">地點</string>
    <string name="episodeContent">事蹟內容</string>
    <string name="editEpisodeContent">輸入事蹟內容</string>
    <string name="addFamily">創建家族</string>
    <string name="userName">姓名</string>
    <string name="editUserName">輸入姓名</string>
    <string name="userGender">性別</string>
    <string name="userBirth">出生日期</string>
    <string name="userBirthdate">日期</string>
    <string name="userEpisdoe">生平事蹟</string>
    <string name="userBirthLocation">地點</string>
    <string name="noUserEpisode">尚未新增事蹟</string>
    <string name="completeEdit">修改完成</string>
    <string name="addUserEpisdoe">加入事蹟</string>
    <string name="editUserBirthLocation">輸入出生地點</string>
    <string name="noEvent">尚未新增活動</string>
    <string name="addEventWithFamily">新增活動與家人一同參與吧</string>
    <string name="connect_with_your_family">Connect with your family</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="noChatRoom">尚未有聊天室</string>
    <string name="pleaseAddChatRoom">新增家族成員聊天吧</string>
    <string name="identify_qr_code">Identify QR code</string>
    <string name="noCameraPermission">沒有相機權限</string>
    <string name="checkAlbum">查看相簿</string>
    <string name="choose">選擇</string>
    <string name="edit">編輯</string>
    <string name="child">孩子</string>
    <string name="father">父親</string>
    <string name="mate">配偶</string>
    <string name="mother">母親</string>
    <string name="noLocationPermission">沒有允許地圖權限唷</string>
    <string-array name="spn_list">
        <item>聚餐</item>
        <item>休閒活動</item>
        <item>一起運動</item>
        <item>家族總動員</item>
    </string-array>
</resources>