<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_branch"
        android:icon="@drawable/branch_click"
        android:title="@string/branch" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/map" />

    <item
        android:id="@+id/action_empty"
        android:title="Family"
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person"
        android:title="@string/profile" />


</menu>